--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pokedex",
   "version": "0.0.0",
+  "main": "src/main.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -8,5 +9,8 @@
   },
   "devDependencies": {
     "vite": "^2.7.2"
+  },
+  "dependencies": {
+    "bootstrap": "^5.1.3"
   }
 }
